--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta property="og:url" content="https://jaeyeong97-bookstore.netlify.app/" />
-    <meta property="og:title" content="JaeYeong's BBQ-web-page" />
+    <meta property="og:title" content="JaeYeong's bookstore-web-page" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://jaeyeong97-bookstore.netlify.app/img/logo.png" />
     <meta property="og:description" content="장재영의 도서리스트 웹사이트입니다." />
